# FEngine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README  README.md  debug  env.yml  glad.c  init.c  main.cc  run.sh  setup.sh  tmp.c
assets/: fragmentShadder.glsl  vertexShader.glsl
assets/shaders/: default.frag  default.vert  density.comp  fragmentShader.glsl  gravity.comp  summer.comp  velocity.comp
assets/truss/: truss1.csv
include/glad/: glad.h
maths/: matrix.c  matrix.h  utils.h  vector.c  vector.h
mesh/: mesh.c  mesh.h  mesh_loader.c
protos/fem/: Makefile  solver.cc  solver.hh  stiffness.cc
renderer/: renderer.c  renderer.h  shader.h  shader_creator.c
renderer/graphic/: graphic.c  graphic.h
renderer/mesh/: mesh.c  mesh.h  mesh_loader.c
renderer/shader/: shader.h  shader_creator.c
renderer/world/: world.c  world.h
renderer/world/camera/: camera.c  camera.h
renderer/world/mesh/: mesh.c  mesh.h  mesh_loader.c  mesh_loader.h
renderer/world/object/: object.c  object.h
src/: constants.hh  fwd.hh  main.cc  shader.cc  shader.hh  tools.cc  tools.hh
src/fem/: fem_2d_mesh_test.cc  stiffness.cc  tests.sh
src/gui/: Makefile  gui.cc  gui.hh
src/material/: material.cc  material.hh
src/mesh/: generator.cc  mesh.cc  mesh.hh  submesh.cc  submesh.hh
src/object/: aabbox.cc  aabbox.hh  camera.cc  camera.hh  object.cc  object.hh  object.hxx  ray.cc  ray.hh  renderable.hh  transform.cc  transform.hh
src/shader/: compute.cc  compute.hh  render.cc  render.hh  shader.cc  shader.hh
src/simulation/: simulation.cc  simulation.hh
src/simulation/fem/: fem_2d_mesh.cc  fem_2d_mesh.hh  fem_2d_mesh_test.cc  fem_computation.cc  fem_computation.hh  fem_consts.hh  fem_gui.cc  fem_gui.hh  fem_sim.cc  fem_sim.hh
src/simulation/particles/: ptc_gui.cc  ptc_gui.hh  ptc_sim.cc  ptc_simulation.cc  ptc_simulation.hh
src/simulation/physics/: pysc_gui.cc  pysc_gui.hh  pysc_sim.cc  pysc_sim.hh
src/terrain/: terrain.cc  terrain.hh
timer/: timer.c  timer.h
